--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -10,3 +10,7 @@ $color-gray-light-4: #ccc;
 $color-gray-dark-1: #333;
 $color-gray-dark-2: #777;
 $color-gray-dark-3: #999;
+
+// Header
+$header-icon-size: 2rem;
+$header-profile-size: 3.6rem;
