--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,9 @@ body {
   padding: 6.4rem 9.6rem;
   background-image: linear-gradient(to bottom right, #ff3366, #ba265d); }
 
+.flex {
+  display: flex; }
+
 .search {
   position: relative;
   align-self: center;
