--- a/sass/components/_user-nav.scss
+++ b/sass/components/_user-nav.scss
@@ -1,6 +1,14 @@
 .user-nav {
   display: flex;
-  gap: 3.6rem;
+
+  & > * {
+    padding: 1.6rem 2.4rem;
+    transition: all 0.1s;
+
+    &:hover {
+      background-color: $color-gray-light-3;
+    }
+  }
 
   &__icon-box {
     position: relative;
