--- a/css/style.css
+++ b/css/style.css
@@ -112,3 +112,27 @@ body {
 .container {
   max-width: 120rem;
   margin: 0 auto; }
+
+.side-nav {
+  background-color: #333;
+  padding-top: 2.4rem; }
+  .side-nav__list {
+    list-style: none;
+    width: 20rem; }
+  .side-nav__item {
+    padding: 1.2rem 2.4rem; }
+  .side-nav__link {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 1.6rem; }
+    .side-nav__link:link,
+    .side-nav__link :visited {
+      text-decoration: none;
+      color: #faf9f9;
+      text-transform: uppercase;
+      font-size: 1.4rem; }
+  .side-nav__icon {
+    width: 1.6rem;
+    height: 1.6rem;
+    fill: #faf9f9; }
