minor changes to side nav & layout

--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -1,4 +1,9 @@
 .container {
   max-width: 120rem;
   margin: 0 auto;
+
+  box-shadow: 0 2.4rem 4.8rem rgba(#000, 0.3);
+
+  // Development Style
+  height: 100vh;
 }
