--- a/sass/layout/_side-nav.scss
+++ b/sass/layout/_side-nav.scss
@@ -4,11 +4,15 @@
 
   &__list {
     list-style: none;
-    width: 20rem;
+    width: 22.5rem;
   }
 
   &__item {
-    padding: 1.2rem 2.4rem;
+    padding: 1.6rem 3.6rem;
+
+    &--active {
+      background-color: $color-primary;
+    }
   }
 
   &__link {
@@ -16,14 +20,10 @@
     justify-content: flex-start;
     align-items: center;
     gap: 1.6rem;
-
-    &:link,
-    :visited {
-      text-decoration: none;
-      color: $color-gray-light-1;
-      text-transform: uppercase;
-      font-size: 1.4rem;
-    }
+    text-decoration: none;
+    color: $color-gray-light-1;
+    text-transform: uppercase;
+    font-size: 1.4rem;
   }
 
   &__icon {
