--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,8 @@
 // Components
 @import "components/search";
 @import "components/user-nav";
+@import "components/gallery";
+@import "components/overview";
 
 // Layout
 @import "layout/header";
