finish overview styling

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -14,3 +14,6 @@ $color-gray-dark-3: #999;
 // Header
 $header-icon-size: 2rem;
 $header-profile-size: 3.6rem;
+
+// Overview
+$icon-star-size: 2rem;
