--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,3 +1,21 @@
 .flex {
   display: flex;
 }
+
+.flex-group {
+  display: flex;
+  align-items: center;
+  align-self: stretch;
+}
+
+.flex-gap--md-1 {
+  gap: 2.4rem;
+}
+
+.flex-gap--md-2 {
+  gap: 3.6rem;
+}
+
+.flex-col {
+  flex-direction: column;
+}
