--- a/css/style.css
+++ b/css/style.css
@@ -9,16 +9,37 @@ html {
   font-size: 62.5%; }
 
 body {
+  padding: 6.4rem 9.6rem;
+  background-image: linear-gradient(to bottom right, #ff3366, #ba265d); }
+
+body {
   font-family: "Open Sans";
   font-size: 1.6rem;
   font-weight: 400;
   color: #777;
-  line-height: 1.6;
-  padding: 6.4rem 9.6rem;
-  background-image: linear-gradient(to bottom right, #ff3366, #ba265d); }
+  line-height: 1.6; }
+
+.heading-primary {
+  font-weight: 300;
+  font-size: 2.4rem;
+  text-transform: uppercase; }
 
 .flex {
   display: flex; }
+
+.flex-group {
+  display: flex;
+  align-items: center;
+  align-self: stretch; }
+
+.flex-gap--md-1 {
+  gap: 2.4rem; }
+
+.flex-gap--md-2 {
+  gap: 3.6rem; }
+
+.flex-col {
+  flex-direction: column; }
 
 .search {
   position: relative;
@@ -99,6 +120,48 @@ body {
   .gallery__img {
     max-width: 33.33333%;
     display: block; }
+
+.overview {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #faf9f9; }
+  .overview .heading-primary {
+    padding: 1.6rem 0 1.6rem 3.6rem; }
+  .overview__stars {
+    display: flex;
+    align-items: center; }
+  .overview__icon-star {
+    width: 2rem;
+    height: 2rem;
+    fill: #eb2f64; }
+  .overview__location {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem; }
+    .overview__location-link {
+      text-decoration: none; }
+      .overview__location-link:link, .overview__location-link:visited {
+        color: #eb2f64;
+        font-size: 1.2rem;
+        border-bottom: 1px solid #eb2f64;
+        transition: all 0.3s; }
+      .overview__location-link:hover, .overview__location-link:active {
+        color: #333;
+        border-bottom: 1px solid #333; }
+  .overview__rating {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #eb2f64;
+    color: #faf9f9;
+    padding: 1.2rem 1.6rem; }
+    .overview__rating-average {
+      font-size: 2rem;
+      font-weight: 300; }
+    .overview__rating-count {
+      font-size: 1rem;
+      font-weight: 300; }
 
 .header {
   display: flex;
