add details HTML

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import "base/utilities";
 
 // Components
+@import "components/details";
 @import "components/search";
 @import "components/user-nav";
 @import "components/gallery";
