--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,10 @@ body {
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.3);
   height: 100vh; }
 
+.hotel-container {
+  padding: 3.6rem;
+  background-color: #f0eeee; }
+
 .side-nav {
   background-color: #333;
   padding-top: 2.4rem; }
