finish general page layout

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,18 @@ body {
 .flex-col {
   flex-direction: column; }
 
+.details {
+  display: flex;
+  gap: 3.6rem; }
+  .details__description {
+    background-color: #faf9f9; }
+  .details__reviews {
+    display: flex;
+    flex-direction: column;
+    gap: 3.6rem; }
+  .details .review {
+    background-color: #faf9f9; }
+
 .search {
   position: relative;
   align-self: center;
@@ -184,9 +196,12 @@ body {
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.3);
   height: 100vh; }
 
-.hotel-container {
+.hotel-content {
   padding: 3.6rem;
-  background-color: #f0eeee; }
+  background-color: #f0eeee;
+  display: flex;
+  flex-direction: column;
+  gap: 3.6rem; }
 
 .side-nav {
   background-color: #333;
