finish description styling

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -11,6 +11,8 @@ $color-gray-dark-1: #333;
 $color-gray-dark-2: #777;
 $color-gray-dark-3: #999;
 
+$color-white: #fff;
+
 // Header
 $header-icon-size: 2rem;
 $header-profile-size: 3.6rem;
