--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,13 @@ body {
   font-size: 2.4rem;
   text-transform: uppercase; }
 
+.paragraph {
+  font-size: inherit;
+  font-weight: 400;
+  line-height: 1.6; }
+  .paragraph:not(:last-child) {
+    margin-bottom: 2.4rem; }
+
 .flex {
   display: flex; }
 
@@ -44,14 +51,53 @@ body {
 .details {
   display: flex;
   gap: 3.6rem; }
-  .details__description {
-    background-color: #faf9f9; }
   .details__reviews {
     display: flex;
     flex-direction: column;
     gap: 3.6rem; }
   .details .review {
     background-color: #faf9f9; }
+
+.description {
+  background-color: #fff;
+  padding: 0 2.4rem;
+  display: flex;
+  flex-direction: column;
+  font-size: 1.4rem; }
+  .description-box {
+    padding: 2.4rem 0; }
+    .description-box:not(:last-child) {
+      border-bottom: 1px solid #f4f2f2; }
+  .description__list {
+    height: 10rem;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap; }
+  .description__item::before {
+    content: "";
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
+    background-image: url("../../img/chevron-thin-right.svg");
+    background-size: cover;
+    margin-right: 0.6rem; }
+  .description__recommend {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+  .description__recommend-text {
+    font-size: 1.4rem;
+    color: #999; }
+  .description__recommend-list {
+    display: flex; }
+  .description__recommend-img {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    border: 3px solid #fff; }
+    .description__recommend-img:not(:last-child) {
+      margin-right: -1.6rem; }
 
 .search {
   position: relative;
