--- a/sass/components/_details.scss
+++ b/sass/components/_details.scss
@@ -2,10 +2,6 @@
   display: flex;
   gap: $details-gutter;
 
-  &__description {
-    background-color: $color-gray-light-1;
-  }
-
   &__reviews {
     display: flex;
     flex-direction: column;
@@ -14,5 +10,66 @@
 
   .review {
     background-color: $color-gray-light-1;
+  }
+}
+
+.description {
+  background-color: $color-white;
+  padding: 0 2.4rem;
+  display: flex;
+  flex-direction: column;
+  font-size: 1.4rem;
+
+  &-box {
+    padding: 2.4rem 0;
+    &:not(:last-child) {
+      border-bottom: 1px solid $color-gray-light-2;
+    }
+  }
+
+  &__list {
+    height: 10rem;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  &__item {
+    &::before {
+      content: "";
+      display: inline-block;
+      width: 1rem;
+      height: 1rem;
+      background-image: url("../../img/chevron-thin-right.svg");
+      background-size: cover;
+      margin-right: 0.6rem;
+    }
+  }
+
+  &__recommend {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__recommend-text {
+    font-size: 1.4rem;
+    color: $color-gray-dark-3;
+  }
+
+  &__recommend-list {
+    display: flex;
+  }
+
+  &__recommend-img {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    border: 3px solid $color-white;
+
+    &:not(:last-child) {
+      margin-right: -1.6rem;
+    }
   }
 }
