--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -12,6 +12,7 @@ $color-gray-dark-2: #777;
 $color-gray-dark-3: #999;
 
 $color-white: #fff;
+$color-black: #000;
 
 // Header
 $header-icon-size: 2rem;
