--- a/sass/components/_details.scss
+++ b/sass/components/_details.scss
@@ -73,3 +73,57 @@
     }
   }
 }
+
+.review {
+  padding: 2.4rem;
+  box-shadow: 0 1.2rem 3.6rem rgba($color-black, 0.15);
+
+  &__text {
+    font-size: 1.4rem;
+    margin-bottom: 2.4rem;
+  }
+
+  &__details {
+    display: flex;
+    align-items: center;
+    gap: 2.4rem;
+  }
+
+  &__img {
+    max-height: 4.8rem;
+    border-radius: 50%;
+  }
+
+  &__user-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.6rem;
+  }
+
+  &__user {
+    font-size: 1.2rem;
+    font-weight: 700;
+  }
+
+  &__date {
+    font-size: 1rem;
+    color: $color-gray-dark-3;
+  }
+
+  &__score {
+    margin-left: auto;
+    font-size: 2.4rem;
+    font-weight: 300;
+    color: $color-primary;
+  }
+
+  &__show-all {
+    text-align: center;
+
+    &:link,
+    &:visited {
+      text-decoration: none;
+    }
+  }
+}
