--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -5,7 +5,7 @@
   box-shadow: 0 2.4rem 4.8rem rgba(#000, 0.3);
 
   // Development Style
-  height: 100vh;
+  // height: 100vh;
 }
 
 .hotel-content {
