--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 
 // Components
 @import "components/btn";
+@import "components/cta";
 @import "components/details";
 @import "components/search";
 @import "components/user-nav";
