--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -9,3 +9,9 @@
   align-items: center;
   justify-content: center;
 }
+
+@mixin absCenter {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
