--- a/sass/components/_details.scss
+++ b/sass/components/_details.scss
@@ -19,6 +19,7 @@
   display: flex;
   flex-direction: column;
   font-size: 1.4rem;
+  box-shadow: 0 1.2rem 2.4rem rgba($color-black, 0.15);
 
   &-box {
     padding: 2.4rem 0;
