--- a/sass/layout/_side-nav.scss
+++ b/sass/layout/_side-nav.scss
@@ -13,6 +13,12 @@
     &--active {
       background-color: $color-primary;
     }
+
+    animation: navMouseOut 0.4s ease backwards;
+
+    &:hover {
+      animation: navMouseIn 0.3s ease-in forwards;
+    }
   }
 
   &__link {
