--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,14 @@ body {
     background-image: url("../../img/chevron-thin-right.svg");
     background-size: cover;
     margin-right: 0.6rem; }
+  @supports ((-webkit-mask-image: url("../../img/chevron-thin-right.svg")) and (-webkit-mask-size: cover)) or ((mask-image: url("../../img/chevron-thin-right.svg")) and (mask-size: cover)) {
+    .description__item::before {
+      background-image: none;
+      background-color: #eb2f64;
+      -webkit-mask-image: url("../../img/chevron-thin-right.svg");
+      mask-image: url("../../img/chevron-thin-right.svg");
+      -webkit-mask-size: cover;
+      mask-size: cover; } }
   .description__recommend {
     display: flex;
     justify-content: space-between;
@@ -179,10 +187,23 @@ body {
 
 .review {
   padding: 2.4rem;
-  box-shadow: 0 1.2rem 3.6rem rgba(0, 0, 0, 0.15); }
+  box-shadow: 0 1.2rem 3.6rem rgba(0, 0, 0, 0.15);
+  position: relative; }
+  .review::before {
+    content: "\201C";
+    position: absolute;
+    font-family: sans-serif;
+    font-size: 20rem;
+    color: #f4f2f2;
+    z-index: 10;
+    top: -2.75rem;
+    left: -0.75rem;
+    line-height: 1; }
   .review__text {
+    position: relative;
     font-size: 1.4rem;
-    margin-bottom: 2.4rem; }
+    margin-bottom: 2.4rem;
+    z-index: 20; }
   .review__details {
     display: flex;
     align-items: center;
