--- a/sass/components/_details.scss
+++ b/sass/components/_details.scss
@@ -46,6 +46,27 @@
       background-size: cover;
       margin-right: 0.6rem;
     }
+
+    @supports (
+      (
+          (-webkit-mask-image: url("../../img/chevron-thin-right.svg")) and
+            (-webkit-mask-size: cover)
+        )
+        or
+        (
+          (mask-image: url("../../img/chevron-thin-right.svg")) and
+            (mask-size: cover)
+        )
+    ) {
+      &::before {
+        background-image: none;
+        background-color: $color-primary;
+        -webkit-mask-image: url("../../img/chevron-thin-right.svg");
+        mask-image: url("../../img/chevron-thin-right.svg");
+        -webkit-mask-size: cover;
+        mask-size: cover;
+      }
+    }
   }
 
   &__recommend {
@@ -78,10 +99,25 @@
 .review {
   padding: 2.4rem;
   box-shadow: 0 1.2rem 3.6rem rgba($color-black, 0.15);
+  position: relative;
+
+  &::before {
+    content: "\201C";
+    position: absolute;
+    font-family: sans-serif;
+    font-size: 20rem;
+    color: $color-gray-light-2;
+    z-index: 10;
+    top: -2.75rem;
+    left: -0.75rem;
+    line-height: 1;
+  }
 
   &__text {
+    position: relative;
     font-size: 1.4rem;
     margin-bottom: 2.4rem;
+    z-index: 20;
   }
 
   &__details {
