--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -12,6 +12,10 @@ html {
   @include respond(tab-land) {
     font-size: 56.25%;
   }
+
+  @include respond(tab-port) {
+    font-size: 50%;
+  }
 }
 
 body {
