--- a/sass/layout/_side-nav.scss
+++ b/sass/layout/_side-nav.scss
@@ -2,9 +2,18 @@
   background-color: $color-gray-dark-1;
   padding-top: 2.4rem;
 
+  @include respond(tab-port) {
+    padding: 0;
+  }
+
   &__list {
     list-style: none;
     width: 22.5rem;
+
+    @include respond(tab-port) {
+      display: flex;
+      width: auto;
+    }
   }
 
   &__item {
@@ -18,6 +27,11 @@
 
     &:hover {
       animation: navMouseIn 0.3s ease-in forwards;
+    }
+
+    @include respond(tab-port) {
+      @include flexCenter;
+      flex-grow: 1;
     }
   }
 
