--- a/sass/components/_details.scss
+++ b/sass/components/_details.scss
@@ -2,6 +2,10 @@
   display: flex;
   gap: $details-gutter;
 
+  @include respond(phone) {
+    flex-wrap: wrap;
+  }
+
   &__reviews {
     display: flex;
     flex-direction: column;
@@ -34,6 +38,10 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+
+    @include respond(phone) {
+      height: auto;
+    }
   }
 
   &__item {
