--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,6 +4,11 @@
   justify-content: space-between;
   align-items: center;
 
+  @include respond(phone) {
+    flex-wrap: wrap;
+    padding-bottom: 1.2rem;
+  }
+
   &__logo-box {
     height: 3.6rem;
     margin-left: 1.6rem;
@@ -20,6 +25,12 @@
 
     @include respond(tab-port) {
       height: 3rem;
+    }
+
+    @include respond(phone) {
+      height: 4rem;
+      order: 10;
+      flex-basis: 100%;
     }
   }
 }
