--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,13 +1,15 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+  box-sizing: inherit;
   padding: 0;
   margin: 0;
 }
 
 html {
   font-size: 62.5%;
+
+  box-sizing: border-box;
 
   @include respond(tab-land) {
     font-size: 56.25%;
