--- a/sass/layout/_side-nav.scss
+++ b/sass/layout/_side-nav.scss
@@ -9,25 +9,46 @@
   &__list {
     list-style: none;
     width: 22.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
 
     @include respond(tab-port) {
-      display: flex;
       width: auto;
+      flex-direction: row;
+      gap: 0;
     }
   }
 
+  &__item::before {
+    content: "";
+    width: 3px;
+    height: 100%;
+    background-color: $color-primary;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 1;
+
+    transform: scaleY(0);
+
+    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s;
+  }
+
+  &__item:hover::before,
+  &__item--active::before {
+    transform: scaleY(1);
+    width: 100%;
+  }
+
+  &__item:active::before {
+    background-color: $color-primary-light;
+  }
+
   &__item {
+    position: relative;
+    z-index: 9999;
     padding: 1.6rem 3.6rem;
-
-    &--active {
-      background-color: $color-primary;
-    }
-
-    animation: navMouseOut 0.4s ease backwards;
-
-    &:hover {
-      animation: navMouseIn 0.3s ease-in forwards;
-    }
 
     @include respond(tab-port) {
       @include flexCenter;
@@ -40,6 +61,8 @@
   }
 
   &__link {
+    position: relative;
+    z-index: inherit;
     display: flex;
     justify-content: flex-start;
     align-items: center;
