--- a/css/style.css
+++ b/css/style.css
@@ -317,14 +317,15 @@ body {
 .gallery {
   display: flex; }
   .gallery__img {
-    max-width: 33.33333%;
+    max-width: 33.33334%;
     display: block; }
 
 .overview {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #faf9f9; }
+  background-color: #faf9f9;
+  border-bottom: 1px solid #f4f2f2; }
   @media only screen and (max-width: 37.5em) {
     .overview {
       flex-wrap: wrap;
@@ -376,7 +377,8 @@ body {
   display: flex;
   background-color: #faf9f9;
   justify-content: space-between;
-  align-items: center; }
+  align-items: center;
+  border-bottom: 1px solid #f4f2f2; }
   @media only screen and (max-width: 37.5em) {
     .header {
       flex-wrap: wrap;
