--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,6 +4,8 @@
   justify-content: space-between;
   align-items: center;
 
+  border-bottom: 1px solid $color-gray-light-2;
+
   @include respond(phone) {
     flex-wrap: wrap;
     padding-bottom: 1.2rem;
